<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:backgroundTint="@color/primaryTextColor"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layerType="none"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/primaryTextColor"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/oval_button"
            android:drawablePadding="-35dp"
            android:fontFamily="@font/roboto"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#0E0C0C"
            app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/oval_button"
            android:drawablePadding="-35dp"
            android:fontFamily="@font/roboto"
            android:maxWidth="150dp"
            android:minWidth="150dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#0E0C0C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/loading_bar"
            layout="@layout/layout_progress_bar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>